<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sreeraj.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/my_nanodegree_apps"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/spotify_streamer_button"
        style="@style/ButtonStyle"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_weight="1"
        android:text="@string/spotify_streamer"/>

    <Button
        android:id="@+id/scores_app_button"
        style="@style/ButtonStyle"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_weight="1"
        android:text="@string/scores_app"/>

    <Button
        android:id="@+id/library_app_button"
        style="@style/ButtonStyle"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_weight="1"
        android:text="@string/library_app"/>

    <Button
        android:id="@+id/build_it_bigger_app_button"
        style="@style/ButtonStyle"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_weight="1"
        android:text="@string/build_it_bigger"/>

    <Button
        android:id="@+id/xyz_reader_app_button"
        style="@style/ButtonStyle"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_weight="1"
        android:text="@string/xyz_reader"/>

    <Button
        android:id="@+id/capstone_button"
        android:layout_width="@dimen/width_medium"
        android:layout_height="@dimen/height_medium"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_weight="1"
        android:background="@color/secondaryButtonColor"
        android:paddingBottom="@dimen/margin_large"
        android:paddingLeft="@dimen/margin_medium"
        android:paddingRight="@dimen/margin_medium"
        android:paddingTop="@dimen/margin_large"
        android:text="@string/capstone_my_own_app"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold"/>

</LinearLayout>

